String? phoneValidator(String? phone) {
  const String patttern = r'(^[0-9]{10,11}$)';
  final RegExp regExp = RegExp(patttern);
  if (phone == null || phone.isEmpty) {
    return 'Số điện thoại không được để trống';
  } else if (phone.length < 10 || phone.length > 11) {
    return 'Số điện thoại phải là 10-11 số';
  } else if (!regExp.hasMatch(phone)) {
    return 'Số điện thoại không hợp lệ';
  }

...
}

String? quarantineTimeValidator(String? time) {
  const String patttern = r'^[0-9]+$';
  final RegExp regExp = RegExp(patttern);
  if (time == null || time.isEmpty) {
    return "Trường này là bắt buộc";
  } else if (!regExp.hasMatch(time)) {
    return 'Ngày cách ly không hợp lệ';
  }
  return null;
}

...
