...
              ],
            ),
          ),
          Card(
            child: ListTile(
              onTap: () {},
              title: Text('Đăng xuất',
                  style: TextStyle(color: CustomColors.error)),
              trailing: Icon(
                Icons.logout_outlined,
                color: CustomColors.error,
              ),
            ),
...
